syntax = "proto2";
package douyin.extra.second;

message douyin_message_chat_request {
  required string token = 1;     // 用户鉴权token
  required int64 to_user_id = 2; // 对方用户id
}

message douyin_message_chat_response {
  required int32 status_code = 1;    // 状态码，0-成功，其他值-失败
  optional string status_msg = 2;    // 返回状态描述
  repeated Message message_list = 3; // 消息列表
}

message Message {
  required int64 id = 1;           // 消息id
  required int64 to_user_id = 2;   // 该消息接收者的id
  required int64 from_user_id = 3; // 该消息发送者的id
  required string content = 4;     // 消息内容
  optional string create_time = 5; // 消息创建时间
}